versions/2023.1.0/_sources/api/generated/BioSimSpace._SireWrappers.System.rst.txt
BioSimSpace.\_SireWrappers.System
=================================

.. currentmodule:: BioSimSpace._SireWrappers

.. autoclass:: System

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~System.__init__
      ~System.addMolecules
      ~System.charge
      ~System.copy
      ~System.fileFormat
      ~System.getAtom
      ~System.getAxisAlignedBoundingBox
      ~System.getBox
      ~System.getIndex
      ~System.getMolecule
      ~System.getMolecules
      ~System.getPerturbableMolecules
      ~System.getResidue
      ~System.getRestraintAtoms
      ~System.getWaterMolecules
      ~System.nAtoms
      ~System.nChains
      ~System.nMolecules
      ~System.nPerturbableMolecules
      ~System.nResidues
      ~System.nWaterMolecules
      ~System.removeMolecules
      ~System.removeWaterMolecules
      ~System.repartitionHydrogenMass
      ~System.search
      ~System.setBox
      ~System.translate
      ~System.updateMolecule
      ~System.updateMolecules
   
   

   
   
   